[ErnieSage] Change the spawn to distributed.launch. (#226)
* [ErnieSage] Change the spawn to launch.

* use paddle distributed.

* optimize get_rank call times.

--- a/examples/text_graph/erniesage/config/erniesage_link_prediction.yaml
+++ b/examples/text_graph/erniesage/config/erniesage_link_prediction.yaml
@@ -1,7 +1,7 @@
 # Global Enviroment Settings 
 
 # trainer config ------
-n_gpu: 1 # number of gpus used to train, delete it, if use cpu
+device: "gpu" # use cpu or gpu devices to train.
 seed: 2020
 
 task: "link_prediction"
