Fix bug and update docs (#315)
* feat: add text_simultaneous_translation: STACL

* refactor: update requirement and readme, rename function/class name

* feat: add tokenizer

* refactor: refactor vocab,data_reader

* refactor: rename TransformerModel, fix src_slf_attn_bias

* docs: update README and requirements

* fix: avoid getting the whole source in advance

* docs: update docs

* refactor: refactor tokenizer

* docs: update pretrained model BLEU

* docs: update docs

* style: change code style(line too long)

* docs: update information_extraction link

* docs: add pretrained models download link

* docs: add STACL to example_readme;enrich parameters description

* fix: fix the wrong shape of validation label

* docs: set default parameters to yaml

Co-authored-by: Guo Sheng <whucsgs@163.com>

--- a/examples/machine_translation/text_simultaneous_translation/config/transformer.yaml
+++ b/examples/machine_translation/text_simultaneous_translation/config/transformer.yaml
@@ -21,9 +21,9 @@ predict_file: "data/nist2m/testdata/test_08.zh"
 # The file to output the translation results of predict_file to.
 output_file: "predict.txt"
 # The path of vocabulary file of source language.
-src_vocab_fpath: "data/nist2m/vocab_zh.20k.bpe"
+src_vocab_fpath: "data/nist2m/nist.20k.zh.vocab"
 # The path of vocabulary file of target language.
-trg_vocab_fpath: "data/nist2m/vocab_en.10k.bpe"
+trg_vocab_fpath: "data/nist2m/nist.10k.en.vocab"
 # The <bos>, <eos> and <unk> tokens in the dictionary.
 special_token: ["<s>", "<e>", "<unk>"]
 
