--- a/paddlenlp/ops/faster_transformer/CMakeLists.txt
+++ b/paddlenlp/ops/faster_transformer/CMakeLists.txt
@@ -11,9 +11,4 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-from .faster_transformer.transformer.decoding import *
-from .faster_transformer.transformer.faster_transformer import *
-from .einsum import *
-from .distributed import *
-from . import optimizer
+add_subdirectory(src)
